2003-04-14  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-dock-item-grip.c
	(bonobo_dock_item_grip_instance_init): disable can-focus.

	* bonobo/bonobo-ui-toolbar-button-item.c
	(bonobo_ui_toolbar_button_item_construct): ditto.

	* bonobo/bonobo-dock.c (bonobo_dock_focus_roll): bin this.

	* bonobo/bonobo-window.c (bonobo_window_key_press_event) 
	(bonobo_window_key_release_event, bonobo_window_focus): bin
	allow_all_focus nonsense.

2003-04-11  Padraig O'Briain  <padraig.obriain@sun.com>

	* bonobo/bonobo-canvas-component.c, bonobo/bonobo-control-frame.c,
	bonobo/bonobo-control.c, bonobo/bonobo-property-control.c,
	bonobo/bonobo-ui-component.c, bonobo/bonobo-ui-container.c,
	bonobo/bonobo-zoomable-frame.c, bonobo/bonobo-zoomable.c:
	Remove semicolon after macro BONOBO_TYPE_FUNC_FULL; this fixes
	compiler warning when using FORTE compiler.

2003-04-07  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* bonobo/bonobo-ui-toolbar.c (impl_get_property): Add container's
	border_width to the returned preferred_width and preferred_height
	so the toolbar gets enough allocation space when it's in a
	non-exclusive dock item.

2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-24  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* Makefile.am (EXTRA_DIST): Include gtk-doc.make in the
	distribution.

	* doc/api/figures/Makefile.am: Don't delete the png files when
	doing make maintainer-clean.

	* configure.in: Use the macro GTK_DOC_CHECK to check for gtk-doc.

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): Pass --enable-gtk-doc
	to configure when making distcheck, otherwise it fails.

	* autogen.sh (REQUIRED_AUTOMAKE_VERSION): require automake 1.6.

2003-03-21  Guntupalli Karunakar  <karunakar@freeedomink.org>

	* configure.in: Added "ml" in ALL_LINGUUAS

2003-03-04  Radek Doulik  <rodo@ximian.com>

	* bonobo/bonobo-ui-engine.c (execute_state_updates):
	increase/decrease bonobo_ui_engine_inhibit_events counter